tests/NormalTests/paczka1/fuzzy1/59127211.err
Error in line 5: S431 S431 -1,5
Error in line 4: WJ4C5BE A347 16,2
Error in line 13: TOxy S336 -2,8
Error in line 17: S431 A347 54,83
Error in line 16: vKlTt80Sm72 S336 13,2
Error in line 19: S431 S336 70,9
